--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,170 @@
 /* You can add global styles to this file, and also import other style files */
+@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html, body {
+    font-family: 'Montserrat';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    background-image: url("assets/img/backBN.jpg");
+    background-size: auto;
+}
+.contenedor {
+    min-height: 100%;
+    clear: both;
+}
+nav {
+    background-color: white;
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+}
+.links {
+    list-style-type: none;
+}
+.links li {
+    border-right: 2px solid red;
+    padding: 0 8px 0 8px;
+}
+.links li a {
+    text-decoration: none;
+    color: black;
+}
+img {
+    width: 100%;
+}
+.logo {
+    padding: 10px;
+}
+.brand {
+    width: 100px;
+}
+.flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    width: auto;
+}
+
+.block-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    width: auto;
+}
+
+.menu {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.banner {
+    width: 100%;
+    min-height: 250px;
+    background-image: url("https://www.enter.co/wp-content/uploads/2021/12/MarvelStudios.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: black;
+}
+
+.link-active {
+    color: black;
+    font-weight: bold;
+}
+
+.card p {
+    font-size: small;
+    font-family: 'Montserrat';
+}
+
+.card-title {
+    text-align: center;
+}
+
+.comics-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: space-between;
+}
+
+.card-image img{
+    border-top-right-radius: 40px;
+    border-bottom-left-radius: 40px;
+}
+
+.body-background {
+    background-color:rgba(0, 0, 0, 0.65);
+    margin-bottom: 100px;
+}
+
+.footer {
+    background-color: black;
+    color: white;
+    min-height: 100px;
+    position: relative;
+    margin-top: -100px;
+    clear: both;
+    width: 100%;
+}
+
+/*************************************************************************************************/
+/*start FLIP*/
+.card {
+    background-color: white;
+    border-radius: 10px;
+    width: 16rem;
+    height: 25rem;
+    padding: 20px;
+    float: left;
+    margin: 10px;
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  }
+  
+  /* This container is needed to position the front and back side */
+  .card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.1s;
+    transform-style: preserve-3d;
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .card-flip {
+    transform: rotateY(180deg);
+  }
+  
+  /* Position the front and back side */
+  .card-front, .card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .card-front {
+    color: black;
+  }
+  
+  /* Style the back side */
+  .card-back {
+    color: black;
+    transform: rotateY(180deg);
+    text-align: justify;
+  }
+/*end FLIP*/
