--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,39 @@
-<p>home works!</p>
+<div class="container">
+    <h1 style="color: white;">
+        Welcome to Marvel Store
+    </h1>
+    <span style="color: white;">
+        Find your favourite Marvel products here!
+    </span><br><br>
+
+    <div class="card-home">
+        <div class="card-home-img">
+            <img src="https://wallpapercave.com/wp/wp6705937.jpg" alt="">
+        </div>
+        <div class="card-home-content">
+            <div >
+                <h3>COMICS</h3><br><br>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos in, 
+                    incidunt corrupti, nemo unde mollitia officia consectetur culpa nostrum 
+                    facere eligendi quasi quam, voluptatum non corporis velit est ab placeat!
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="card-home">
+        <div class="card-home-content">
+            <div >
+                <h3>COMICS</h3><br><br>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos in, 
+                    incidunt corrupti, nemo unde mollitia officia consectetur culpa nostrum 
+                    facere eligendi quasi quam, voluptatum non corporis velit est ab placeat!
+                </p>
+            </div>
+        </div>
+        <div class="card-home-img">
+            <img src="https://wallpapercave.com/wp/wp6705937.jpg" alt="">
+        </div>
+    </div>
+</div>
