--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,12 +10,14 @@ html, body {
     display: block;
     width: 100%;
     height: 100%;
+    min-width: fit-content;
     background-color: black;
     background-image: url("assets/img/backBN.jpg");
     background-size: auto;
 }
 .contenedor {
     min-height: 100%;
+    width: 100%;
     clear: both;
 }
 nav {
@@ -117,6 +119,44 @@ img {
     margin-top: -100px;
     clear: both;
     width: 100%;
+}
+
+.card-home {
+    background-color: rgba(255, 255, 255, 0.884);
+    width: 100%;
+    height: auto;
+    color: black;
+    padding: 20px;
+    border-right: 5px solid red;  
+    border-left: 5px solid red;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+    min-width: fit-content;
+    justify-items: space;
+}
+.card-home-img {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    img {
+        max-width: 500px;
+        border-top-right-radius: 40px;
+        border-bottom-left-radius: 40px;
+    }
+}
+.card-home-content {
+    display: flex;
+    text-align: justify;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    max-width: 500px;
+}
+
+.container {
+    padding: 20px 50px;
 }
 
 /*************************************************************************************************/
