--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="contenedor">
+<div class="contenedor" appHamburgesa>
     <app-header></app-header>
     <div class="body-background">
         <router-outlet></router-outlet>
