--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,13 +7,14 @@
 }
 html, body {
     font-family: 'Montserrat';
+    position: absolute;
     display: block;
     width: 100%;
     height: 100%;
     min-width: fit-content;
     background-color: black;
     background-image: url("assets/img/backBN.jpg");
-    background-size: auto;
+    background-size:contain;
 }
 .contenedor {
     min-height: 100%;
@@ -119,6 +120,49 @@ img {
     margin-top: -100px;
     clear: both;
     width: 100%;
+}
+
+.card-login {
+    background-color: white;
+    width: 500px;
+    height: 300px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 100px;
+    color: black;
+    border-radius: 10px;
+}
+.content-login {
+    margin: 10px;
+    padding: 20px;
+    display: flex;
+    flex-flow: column;
+    text-align: center;
+    justify-content: center;
+
+    input {
+        font-size: medium;
+        height: 30px;
+        width: 300px;
+        margin: 8px;
+        border: 0;
+        border-bottom: 3px solid red;
+        outline: none;
+    }
+}
+button {
+    font-family: "Montserrat";
+    font-weight: bold;
+}
+.btn-black {
+    background-color: black;
+    color: white;
+    height: 40px;
+    border-radius: 5px;
+    margin: 10px;
 }
 
 .card-home {
