--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -6,8 +6,8 @@
   </div>
   <div class="menu">
     <ul class="links" [ngClass]="toggle?'links-toggle':''">
-      <li [routerLink]="['/home']" [routerLinkActive]="['link-active']">Home</li>
-      <li [routerLink]="['/comics']" [routerLinkActive]="['link-active']">Comics</li>
+      <li [routerLink]="['/main/home']" [routerLinkActive]="['link-active']">Home</li>
+      <li [routerLink]="['/main/comics']" [routerLinkActive]="['link-active']">Comics</li>
       <li>Heroes</li>
       <li>Movies</li>
     </ul>
