--- a/src/app/main/header/header.component.scss
+++ b/src/app/main/header/header.component.scss
@@ -6,11 +6,11 @@ nav {
     align-items: center;
     padding: 10px;
   }
-  
+
   .brand {
     width: 100px;
   }
-  
+
   .links {
     list-style-type: none;
     display: flex;
@@ -25,19 +25,19 @@ nav {
     text-decoration: none;
     color: black;
   }
-  
+
   .link-active {
     color: black;
     font-weight: bold;
   }
-  
+
   .menu {
     display: flex;
     width: 100%;
     height: 100%;
     z-index: 2;
   }
-  
+
   .banner {
     width: 100%;
     min-height: 250px;
@@ -47,18 +47,19 @@ nav {
     background-position: center;
     background-color: black;
   }
-  
+
   .burger div {
     transition: transform ease-in-out 0.5s;
   }
-  
+
   @media only screen and (max-width: 512px) {
-    /*  .links {
-      display: none;
-    } */
-  
+    nav {
+      position: fixed;
+      z-index: 2;
+    }
+
     .links {
-      position: absolute;
+      position: fixed;
       width: 0%;
       overflow: hidden;
       height: 100%;
@@ -70,11 +71,11 @@ nav {
       align-items: center;
       transition: width ease-in-out 0.5s;
     }
-  
+
     .links-toggle {
       width: 100%;
     }
-  
+
     .links li {
       padding: 10px;
       margin: 20px;
@@ -82,37 +83,37 @@ nav {
       border-bottom: 2px solid red;
       width: max-content;
     }
-  
+
     .links li:hover {
       background-color: rgba(255, 0, 0, 0.253);
     }
-  
+
     .menu {
       justify-content: right;
     }
-  
+
     .burger {
       display: flex;
       flex-flow: column;
       z-index: 2;
     }
-  
-  
+
+
     .burger-toggle {
-  
+
       .bar1 {
         transform: rotate(45deg) translate(7px, 6px);
       }
-  
+
       .bar2 {
         background-color: transparent;
       }
-  
+
       .bar3 {
         transform: rotate(-45deg) translate(8px, -7px);
       }
     }
-  
+
     [class*="bar"] {
       width: 30px;
       height: 6px;
@@ -120,4 +121,3 @@ nav {
       margin: 2px;
     }
   }
-  
