--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -9,7 +9,7 @@
       <li [routerLink]="['/main/home']" [routerLinkActive]="['link-active']">Home</li>
       <li [routerLink]="['/main/comics']" [routerLinkActive]="['link-active']">Comics</li>
       <li>Heroes</li>
-      <li>Movies</li>
+      <li>Market</li>
     </ul>
   </div>
   <div class="burger" (click)="toggleClass()" [ngClass]="toggle?'burger-toggle':''">
