--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,39 +1,47 @@
 <div class="container">
-    <h1 style="color: white;">
-        Welcome to Marvel Store
-    </h1>
-    <span style="color: white;">
-        Find your favourite Marvel products here!
-    </span><br><br>
+    <div class="text-white">
+        <h1>
+            Welcome to Marvel Store
+        </h1>
+        <span>
+            Find your favorite Marvel products here!
+        </span>
+    </div>
+    <hr>
+    <div class="card card-home">
+        <div class="card-home-img">
+            <img class="image-rounded" src="https://wallpapercave.com/wp/wp6705937.jpg" alt="">
+        </div>
+        <div class="card-home-content">
+            <div>
+                <h1 class="content-title">COMICS</h1><br><br>
+                <p class="content-text">
+                    See all the comics we have available for you, add your favorites to your shopping cart.
+                </p>
+            </div>
+            <div class="card-home-bottom">
+                <hr style="background-color: red; height: 1.5px;">
+                <button class="btn-black btn-home">GO TO COMICS</button>
+            </div>
+        </div>
+    </div>
 
-    <div class="card-home">
+    <div class="card card-home">
         <div class="card-home-img">
-            <img src="https://wallpapercave.com/wp/wp6705937.jpg" alt="">
+            <img class="image-rounded" src="https://www.teahub.io/photos/full/219-2197068_funko-pop-marvel-animation.jpg" alt="">
         </div>
         <div class="card-home-content">
-            <div >
-                <h3>COMICS</h3><br><br>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos in, 
-                    incidunt corrupti, nemo unde mollitia officia consectetur culpa nostrum 
-                    facere eligendi quasi quam, voluptatum non corporis velit est ab placeat!
+            <div>
+                <h1 class="content-title">FUNKO POP</h1><br><br>
+                <p class="content-text">
+                    A new section of Marvel FUNKO pop, collect them all.
                 </p>
+            </div>
+            <div class="card-home-bottom">
+                <hr style="background-color: red; height: 1.5px;">
+                <button class="btn-black btn-home">GO TO FUNKO POP</button>
             </div>
         </div>
     </div>
-</div>
-<div class="container">
-    <div class="card-home">
-        <div class="card-home-content">
-            <div >
-                <h3>COMICS</h3><br><br>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos in, 
-                    incidunt corrupti, nemo unde mollitia officia consectetur culpa nostrum 
-                    facere eligendi quasi quam, voluptatum non corporis velit est ab placeat!
-                </p>
-            </div>
-        </div>
-        <div class="card-home-img">
-            <img src="https://wallpapercave.com/wp/wp6705937.jpg" alt="">
-        </div>
-    </div>
+    
 </div>
