--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div class="main-container">
+    <div class="body-background">
+        <router-outlet></router-outlet>
+    </div>
+</div>
