--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,6 @@
-<div class="contenedor">
+<div class="main-container">
     <app-header></app-header>
-    <div class="body-background">
+    <div class="">
         <router-outlet></router-outlet>
     </div>
 </div>
