--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,16 +12,15 @@ html, body {
     width: 100%;
     height: 100%;
     min-width: fit-content;
-    background-color: black;
     background-image: url("assets/img/backBN.jpg");
     background-size:contain;
 }
-.contenedor {
+.main-container {
     min-height: 100%;
     width: 100%;
     clear: both;
+    margin-bottom: 100px;
 }
-
 img {
     width: 100%;
 }
@@ -35,28 +34,13 @@ img {
     width: auto;
 }
 
-.card p {
-    font-size: small;
-    font-family: 'Montserrat';
-}
-
-.card-title {
-    text-align: center;
-}
-
-.comics-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: space-between;
-}
-
-.card-image img{
+.image-rounded {
     border-top-right-radius: 40px;
     border-bottom-left-radius: 40px;
 }
 
 .body-background {
+    position: relative;
     background-color:rgba(0, 0, 0, 0.65);
     margin-bottom: 100px;
 }
@@ -71,40 +55,10 @@ img {
     width: 100%;
 }
 
-.card-login {
-    background-color: white;
-    width: 500px;
-    height: 300px;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    margin-top: 100px;
-    color: black;
-    border-radius: 10px;
-}
-.content-login {
-    margin: 10px;
-    padding: 20px;
-    display: flex;
-    flex-flow: column;
-    text-align: center;
-    justify-content: center;
-
-    input {
-        font-size: medium;
-        height: 30px;
-        width: 300px;
-        margin: 8px;
-        border: 0;
-        border-bottom: 3px solid red;
-        outline: none;
-    }
-}
 button {
     font-family: "Montserrat";
     font-weight: bold;
+    cursor: pointer;
 }
 .btn-black {
     background-color: black;
@@ -112,54 +66,46 @@ button {
     height: 40px;
     border-radius: 5px;
     margin: 10px;
+    font-size: medium
 }
 
-.card-home {
-    background-color: rgba(255, 255, 255, 0.884);
-    width: 100%;
-    height: auto;
-    color: black;
-    padding: 20px;
-    border-right: 5px solid red;  
-    border-left: 5px solid red;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: center;
-    min-width: fit-content;
-    justify-items: space;
-}
-.card-home-img {
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    img {
-        max-width: 500px;
-        border-top-right-radius: 40px;
-        border-bottom-left-radius: 40px;
-    }
-}
-.card-home-content {
-    display: flex;
-    text-align: justify;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-    max-width: 500px;
+.btn-black:hover {
+    background-color: #333333;
 }
 
 .container {
-    padding: 20px 50px;
+    padding: 20px 40px;
+}
+
+.card {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    border-radius: 10px;
+    text-align: justify;
+    padding: 20px;
+    font-size: small;
+    font-family: 'Montserrat';
+}
+
+hr {
+    border-width: 0;
+    background-color: white;
+    height: 4px;
+    margin: 20px 0px;
+}
+
+.text-white {
+    color: white;
 }
 
 /*************************************************************************************************/
-/*start FLIP*/
-.card {
-    background-color: white;
-    border-radius: 10px;
+/*start CARD FLIP*/
+.card-comic {
     width: 16rem;
     height: 25rem;
-    padding: 20px;
     float: left;
     margin: 10px;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
