--- a/src/app/main/comics/comics.component.html
+++ b/src/app/main/comics/comics.component.html
@@ -1,3 +1,3 @@
-<div class="container comics-list">
+<div class=" comics-list">
     <app-card *ngFor="let comic of comics" [comic]="comic"></app-card>
 </div>
