--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,5 @@
-<div class="main-container">
-    <app-header></app-header>
-    <div class="">
+<app-header></app-header>
+    <div class="container">
         <router-outlet></router-outlet>
     </div>
-</div>
 <app-footer></app-footer>
