--- a/src/app/account/login/login.component.scss
+++ b/src/app/account/login/login.component.scss
@@ -6,8 +6,6 @@
     justify-content: center;
 }
 .card-content-login {
-    margin: 10px;
-    padding: 20px;
     display: flex;
     flex-flow: column;
     text-align: center;
@@ -17,8 +15,8 @@
         font-family: 'Montserrat';
         font-size: medium;
         height: 30px;
-        width: auto;
-        margin: 8px;
+        width: 100%;
+        margin: 8px 0px;
         border: 0;
         border-bottom: 2px solid red;
         outline: none;
@@ -30,10 +28,9 @@
     margin: auto;
     background-color: black;
     justify-content: center;
-
     img {
         margin: 20px;
-        width: 200px;
+        max-width: 200px;
         height: auto;
     }
 }
