--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -16,7 +16,7 @@
                 <input type="password" placeholder="Password" formControlName="password">
                 <button class="btn-black" type="submit">SIGN IN</button>
                 <hr style="background-color: black; height: 1px;">
-                <a href="">Create an account</a>
+                <a [routerLink]="['/login/createAccount']">Create an account</a>
             </form>
     </div>
 </div>
