--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -8,9 +8,12 @@
     <ul class="links" [ngClass]="toggle?'links-toggle':''">
       <li [routerLink]="['/main/home']" [routerLinkActive]="['link-active']" (click)="toggleClass()">Home</li>
       <li [routerLink]="['/main/comics']" [routerLinkActive]="['link-active']" (click)="toggleClass()">Comics</li>
-      <li [routerLinkActive]="['link-active']" (click)="toggleClass()">Heroes</li>
-      <li [routerLink]="['/main/market']" [routerLinkActive]="['link-active']" (click)="toggleClass()">Market</li>
+      <li [routerLinkActive]="['link-active']" (click)="toggleClass()">Funkos</li>
     </ul>
+    <div style="float: right;">
+      <a href="" style="padding-right: 15px;">CART</a>
+      <a href="">USUARIO</a>
+    </div>
   </div>
   <div class="burger" (click)="toggleClass()" [ngClass]="toggle?'burger-toggle':''">
     <div class="bar1"></div>
