--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,12 @@ html, body {
     background: url("assets/img/backBN.jpg") no-repeat center fixed;
     background-size: cover;
 }
+main {
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 100%;
+}
 .main-container {
     min-height: 100%;
     width: 100%;
@@ -55,10 +61,10 @@ img {
     background-color: black;
     color: white;
     min-height: 100px;
-    position: relative;
     margin-top: -100px;
     clear: both;
     width: 100%;
+    bottom: 0;
 }
 
 button {
@@ -111,10 +117,10 @@ hr {
 /*************************************************************************************************/
 /*start CARD FLIP*/
 .card-comic {
-    width: 16rem;
+    width: 100%;
     height: 25rem;
     float: left;
-    margin: 10px;
+    align-self: center;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
 
