--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -4,16 +4,24 @@
       src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Marvel_Logo.svg/2560px-Marvel_Logo.svg.png"
       alt="logoMarvel">
   </div>
-  <div class="menu">
-    <ul class="links" [ngClass]="toggle?'links-toggle':''">
+  <div class="menu" [ngClass]="toggle?'menu-toggle':''">
+    <ul class="links">
       <li [routerLink]="['/main/home']" [routerLinkActive]="['link-active']" (click)="toggleClass()">Home</li>
       <li [routerLink]="['/main/comics']" [routerLinkActive]="['link-active']" (click)="toggleClass()">Comics</li>
       <li [routerLinkActive]="['link-active']" (click)="toggleClass()">Funkos</li>
     </ul>
-    <div style="float: right;">
-      <a href="" style="padding-right: 15px;">CART</a>
-      <a href="">USUARIO</a>
-    </div>
+    <ul class="account-links">
+      <li>
+        <span class="material-icons">
+          person
+        </span>
+      </li>
+      <li>
+        <span class="material-icons">
+          shopping_cart
+        </span>
+      </li>
+    </ul>
   </div>
   <div class="burger" (click)="toggleClass()" [ngClass]="toggle?'burger-toggle':''">
     <div class="bar1"></div>
