--- a/src/app/main/comics/comics.component.scss
+++ b/src/app/main/comics/comics.component.scss
@@ -1,9 +1,5 @@
 .comics-list {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 250px));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 20px;
-    align-content: flex-start;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: space-between;
 }
