--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,162 +1,125 @@
 /* You can add global styles to this file, and also import other style files */
 @import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html, body {
-    font-family: 'Montserrat';/* 
+html,
+body {
+  font-family: "Montserrat"; /*
     position: absolute;
     display: block;
     width: 100%;
     height: max-content;
     min-width: min-content; */
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    background: url("assets/img/backBN.jpg") no-repeat center fixed;
-    background-size: cover;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  background: url("assets/img/backBN.jpg") no-repeat center fixed;
+  background-size: cover;
 }
 main {
-    min-height: 100vh;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    grid-template-columns: 100%;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
 }
 .main-container {
-    min-height: 100%;
-    width: 100%;
-    background-color:rgba(0, 0, 0, 0.65);
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+  min-height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.65);
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
 img {
-    width: 100%;
+  width: 100%;
 }
 
 .block-center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: auto;
-    width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  width: auto;
 }
 
 .image-rounded {
-    border-top-right-radius: 40px;
-    border-bottom-left-radius: 40px;
+  border-top-right-radius: 40px;
+  border-bottom-left-radius: 40px;
 }
 
-.body-background {/* 
+.body-background {
+  /*
     position: relative;
     background-color:rgba(0, 0, 0, 0.65);
     margin-bottom: 100px; */
 }
 
 .footer {
-    background-color: black;
-    color: white;
-    min-height: 100px;
-    margin-top: -100px;
-    clear: both;
-    width: 100%;
-    bottom: 0;
+  background-color: black;
+  color: white;
+  min-height: 100px;
+  margin-top: -100px;
+  clear: both;
+  width: 100%;
+  bottom: 0;
 }
 
 button {
-    font-family: "Montserrat";
-    font-weight: bold;
-    cursor: pointer;
+  font-family: "Montserrat";
+  font-weight: bold;
+  cursor: pointer;
 }
 .btn-black {
-    background-color: black;
-    color: white;
-    height: 40px;
-    border-radius: 5px;
-    margin: 10px;
-    font-size: medium
+  background-color: black;
+  color: white;
+  height: 40px;
+  border-radius: 5px;
+  margin: 10px;
+  font-size: medium;
 }
 
 .btn-black:hover {
-    background-color: #333333;
+  background-color: #333333;
 }
 
 .container {
-    padding: 20px 40px;
-    margin-bottom: 100px;
+  padding: 20px;
+  margin-bottom: 100px;
 }
 
 .card {
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    border-radius: 10px;
-    text-align: justify;
-    padding: 20px;
-    font-size: small;
-    font-family: 'Montserrat';
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  border-radius: 10px;
+  text-align: justify;
+  padding: 20px;
+  font-size: small;
+  font-family: "Montserrat";
 }
 
 hr {
-    border-width: 0;
-    background-color: white;
-    height: 4px;
-    margin: 20px 0px;
+  border-width: 0;
+  background-color: white;
+  height: 4px;
+  margin: 20px 0px;
 }
 
 .text-white {
-    color: white;
+  color: white;
 }
 
 /*************************************************************************************************/
 /*start CARD FLIP*/
 .card-comic {
-    width: 100%;
-    height: 25rem;
-    float: left;
-    align-self: center;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  }
-
-  /* This container is needed to position the front and back side */
-  .card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.1s;
-    transform-style: preserve-3d;
-  }
-
-  /* Do an horizontal flip when you move the mouse over the flip box container */
-  .card-flip {
-    transform: rotateY(180deg);
-  }
-
-  /* Position the front and back side */
-  .card-front, .card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
-    backface-visibility: hidden;
-  }
-
-  /* Style the front side (fallback if image is missing) */
-  .card-front {
-    color: black;
-  }
-
-  /* Style the back side */
-  .card-back {
-    color: black;
-    transform: rotateY(180deg);
-    text-align: justify;
-  }
-/*end FLIP*/
+  height: 100%;
+  flex-direction: column;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
