--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,6 +116,19 @@ hr {
   color: white;
 }
 
+.logo-centered {
+  display: flex;
+  margin: auto;
+  background-color: black;
+  justify-content: center;
+
+  img {
+      margin: 20px;
+      width: 200px;
+      height: auto;
+  }
+}
+
 /*************************************************************************************************/
 /*start CARD FLIP*/
 .card-comic {
