--- a/src/app/main/comics/comics.component.html
+++ b/src/app/main/comics/comics.component.html
@@ -1,3 +1,12 @@
+<div class="text-white">
+    <h1>
+        COMICS
+    </h1>
+    <span>
+        Find your favorite Marvel comics here!
+    </span>
+</div>
+<hr>
 <div class=" comics-list">
     <app-card *ngFor="let comic of comics" [comic]="comic"></app-card>
 </div>
