--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -19,7 +19,7 @@
                 </p>
             <div class="card-home-bottom">
                 <hr style="background-color: red; height: 1.5px;">
-                <button class="btn-black btn-home">GO TO COMICS</button>
+                <button class="btn-black btn-home" [routerLink]="['/main/comics']">GO TO COMICS</button>
             </div>
         </div>
     </div>
