--- a/src/app/account/create-account/create-account.component.html
+++ b/src/app/account/create-account/create-account.component.html
@@ -25,7 +25,7 @@
                     <input type="password" placeholder="Password" formControlName="password">
                 </div>
                 
-                <button class="btn-black" type="submit">SIGN IN</button>
+                <button class="btn-black" type="submit">SIGN UP</button>
                 <hr style="background-color: black; height: 1px;">
                 <a [routerLink]="['/login']">I have an account</a>
             </form>
