--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -12,7 +12,7 @@
     </ul>
     <ul class="account-links">
       <li>
-        <span class="material-icons" [routerLink]="['/login']">
+        <span class="material-icons" [routerLink]="['/main/cart']" >
           shopping_cart
         </span>
       </li>
