--- a/src/app/main/comics/comics.component.html
+++ b/src/app/main/comics/comics.component.html
@@ -1,12 +1,31 @@
 <div class="text-white">
-    <h1>
-        COMICS
-    </h1>
-    <span>
-        Find your favorite Marvel comics here!
-    </span>
+  <h1>COMICS</h1>
+  <span> Find your favorite Marvel comics here! </span>
 </div>
-<hr>
-<div class=" comics-list">
-    <app-card *ngFor="let comic of comics" [comic]="comic"></app-card>
+<hr />
+<div class="card">
+  <div class="form-inline">
+    <h3>FILTERS</h3>
+  </div>
+  <form [formGroup]="comicsForm" (submit)="getComicsFilter()">
+    <div class="form-inline">
+      <label for="options">Year</label>
+      <input type="text" (keypress)="($event.charCode >= 48 && $event.charCode <= 57)" maxLength="4" formControlName="year">
+      <label for="options">Date range</label>
+      <select name="options" formControlName="dateRange">
+        <option [ngValue]="" disabled></option>
+        <option *ngFor="let date of dateRanges" [ngValue]="date.id">{{date.name}}</option>
+      </select>
+      <label for="title">Title</label>
+      <input type="text" name="title" formControlName="title" />
+    
+    <button class="btn-black" type="submit">
+      <span class="material-icons"> search </span>
+    </button>
+</div>
+  </form>
+</div>
+<br /><br />
+<div class="comics-list">
+  <app-card *ngFor="let comic of comics" [comic]="comic"></app-card>
 </div>
