--- a/src/app/main/comics/comics.component.scss
+++ b/src/app/main/comics/comics.component.scss
@@ -3,40 +3,27 @@
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 20px;
 }
-
 .card {
+    display: flex;
+    flex-wrap: wrap;
     padding: 10px;
     justify-content: space-between;
-    align-items:initial;
-    text-align: justify;
 }
-
 h3 {
     align-self: center;
 }
-
 label {
     font-weight: 500;
     font-family: 'Montserrat';
     font-size: medium;
-    width: 100%;
     align-self: center;
-    text-align: end;
+    min-width: 100px;
 }
-
-input {
-    width: 100%;
+input, select {
+    max-width: 150px;
 }
-
-.float-right {
-    float: left;
-}
-.float-left {
-    float: right;
-}
-
 button {
     margin: 0 20px;
     padding: 0 5px;
-
+    align-self: flex-end;
 }
