--- a/src/app/main/card/card.component.scss
+++ b/src/app/main/card/card.component.scss
@@ -1,3 +1,11 @@
 .title {
   padding-top: 20px;
+  text-align: center;
+  justify-content: center;
+  height: 60px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
