--- a/src/styles.scss
+++ b/src/styles.scss
@@ -149,6 +149,8 @@ input, select {
 /*start CARD FLIP*/
 .card-comic {
   height: 100%;
-  flex-direction: column;
+  flex-direction: column-reverse;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  justify-content:stretch;
+  vertical-align: bottom;
 }
