--- a/src/app/main/card/card.component.html
+++ b/src/app/main/card/card.component.html
@@ -1,16 +1,13 @@
-<div class="card card-comic" (click)="flip()">
-  <a routerLink="detail/{{ comic.id }}"
-    ><div>
-      <img
-        class="image-rounded"
-        src="{{ comic.thumbnail.path }}.{{ comic.thumbnail.extension }}"
-        alt="{{ comic.title }}"
-      />
+<a routerLink="detail/{{ comic.id }}">
+<div class="card card-comic">
+    <div>
+      <img class="image-rounded" src="{{ comic.thumbnail.path }}.{{ comic.thumbnail.extension }}"
+        alt="{{ comic.title }}" />
     </div>
     <div>
       <h4 class="title">
         {{ comic.title }}
       </h4>
     </div>
-  </a>
 </div>
+</a>
