--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -8,7 +8,7 @@
     <ul class="links">
       <li [routerLink]="['/main/home']" [routerLinkActive]="['link-active']" (click)="toggleClass()">Home</li>
       <li [routerLink]="['/main/comics']" [routerLinkActive]="['link-active']" (click)="toggleClass()">Comics</li>
-      <li [routerLinkActive]="['link-active']" (click)="toggleClass()">Funkos</li>
+      <li [routerLink]="['/main/funkos']" [routerLinkActive]="['link-active']" (click)="toggleClass()">Funkos</li>
     </ul>
     <ul class="account-links">
       <li>
