--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -37,9 +37,9 @@
             </div>
             <div class="card-home-bottom">
                 <hr style="background-color: red; height: 1.5px;">
-                <button class="btn-black btn-home">GO TO FUNKO POP</button>
+                <button class="btn-black btn-home" [routerLink]="['/main/comics']">GO TO FUNKO POP</button>
             </div>
         </div>
     </div>
-    
+
 </div>
