--- a/src/app/main/cart/cart.component.html
+++ b/src/app/main/cart/cart.component.html
@@ -1,11 +1,10 @@
 <div class="text-white">
     <h1>
-        CART
+        MI SHOPING CART
     </h1>
+    <hr>
     <div class="card product" *ngFor="let product of products">
-      <div>
         <img src="{{product.image}}" alt="">
-      </div>
       <div class="details">
         <p><b>{{product.name}}</b></p>
         <p><b>Quantity:</b> {{product.quantity}}</p>
