--- a/src/app/main/cart/cart.component.scss
+++ b/src/app/main/cart/cart.component.scss
@@ -1,6 +1,6 @@
 .product {
   justify-content: space-between;
-  height: 20vh;
+  height: 25vh;
   flex-wrap: wrap;
   margin-top: 5vh;
 }
@@ -15,7 +15,8 @@
 }
 
 .product img {
-  max-width: 20vh;
+  max-width: 100px;
+  height: 100%;
 }
 
 @media only screen and (max-width: 490px) {
@@ -27,7 +28,6 @@
   .details {
     flex-direction: column;
     min-width: max-content;
-    align-items: center;
     justify-content: space-evenly;
   }
 }
