--- a/src/app/main/detail/detail.component.html
+++ b/src/app/main/detail/detail.component.html
@@ -48,11 +48,15 @@
       </span>
       <div class="form-inline">
         <label for="quantity"><h5>QUANTITY:</h5></label>
-        <input type="number" value="1" max="10" min="1" name="quantity" />
+        <div class="form">
+          <button (click)="onDecrement()">-</button>
+          <span>{{quantity}}</span>
+          <button (click)="onIncrement()">+</button>
+        </div>
       </div>
       </div>
-      
-      <button class="btn-black">
+
+      <button class="btn-black" (click)="addToCart()">
         <span class="material-icons" >
           shopping_cart
         </span>
@@ -60,3 +64,8 @@
     </div>
   </div>
 </div>
+
+<div class="card modal" [ngClass]="showModal? 'modal-show':''">
+  <p>Producto agregado al carrito</p>
+</div>
+
