Email notification added

--- a/src/app/main/funko-detail/funko-detail.component.html
+++ b/src/app/main/funko-detail/funko-detail.component.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       </div>
-      <button class="btn-black" (click)="addToCart()">
+      <button class="btn-black" (click)="addToCart()" [disabled]="false">
         <span class="material-icons" >
           shopping_cart
         </span>
