--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,6 +74,15 @@ button {
   font-weight: bold;
   cursor: pointer;
 }
+
+.btn-buy {
+  background-color: yellow;
+  height: 40px;
+  border-radius: 5px;
+  margin: 10px;
+  font-size: medium;
+}
+
 .btn-black {
   background-color: black;
   color: white;
