--- a/src/app/main/funko-detail/funko-detail.component.scss
+++ b/src/app/main/funko-detail/funko-detail.component.scss
@@ -93,7 +93,7 @@ label {
 }
 
 .form button {
-  background-color: orangered;
+  background-color: red;
   border-radius: 6px;
   color: white;
   border: none;
@@ -102,7 +102,7 @@ label {
 }
 
 .form button:hover {
-  background-color: rgb(211, 211, 8);
+  background-color: rgb(162, 0, 0);
 }
 
 .form-inline {
