--- a/src/app/main/detail/detail.component.scss
+++ b/src/app/main/detail/detail.component.scss
@@ -107,7 +107,7 @@ label {
 }
 
 .form button {
-  background-color: orangered;
+  background-color: red;
   border-radius: 6px;
   color: white;
   border: none;
@@ -116,7 +116,7 @@ label {
 }
 
 .form button:hover {
-  background-color: rgb(211, 211, 8);
+  background-color: rgb(162, 0, 0);
 }
 
 .form-inline {
